// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getComponentCss() > should return correct css for hasSlottedAnchor: false, isActive: false and theme: %s 1`] = `
":host {
  display: grid;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
a {
  all: unset;
  padding: calc(clamp(8px, 0.5vw + 6px, 16px) + 2px) calc(clamp(8px, 0.5vw + 6px, 16px) + 4px);
  margin: -2px calc(clamp(8px, 0.5vw + 6px, 16px) * -1 - 4px);
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-sm));
  font: normal normal 400 clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: var(--_p-a);
  text-decoration: underline;
  text-decoration-color: transparent;
  cursor: pointer;
  transition: text-decoration-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
a:focus-visible {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
@media(hover:hover) {
  a:hover {
    text-decoration-color: inherit;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for hasSlottedAnchor: false, isActive: true and theme: %s 1`] = `
":host {
  display: grid;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
a {
  all: unset;
  padding: calc(clamp(8px, 0.5vw + 6px, 16px) + 2px) calc(clamp(8px, 0.5vw + 6px, 16px) + 4px);
  margin: -2px calc(clamp(8px, 0.5vw + 6px, 16px) * -1 - 4px);
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-sm));
  font: normal normal 400 clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: var(--_p-a);
  text-decoration: underline;
  text-decoration-color: inherit;
  cursor: default;
  transition: text-decoration-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
a:focus-visible {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
@media(hover:hover) {
  a:hover {
    text-decoration-color: inherit;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for hasSlottedAnchor: false, isActive: true and theme: %s 2`] = `
":host {
  display: grid;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
a {
  all: unset;
  padding: calc(clamp(8px, 0.5vw + 6px, 16px) + 2px) calc(clamp(8px, 0.5vw + 6px, 16px) + 4px);
  margin: -2px calc(clamp(8px, 0.5vw + 6px, 16px) * -1 - 4px);
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-sm));
  font: normal normal 400 clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: var(--_p-a);
  text-decoration: underline;
  text-decoration-color: inherit;
  cursor: default;
  transition: text-decoration-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
a:focus-visible {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
@media(hover:hover) {
  a:hover {
    text-decoration-color: inherit;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for hasSlottedAnchor: false, isActive: true and theme: %s 3`] = `
":host {
  display: grid;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
a {
  all: unset;
  padding: calc(clamp(8px, 0.5vw + 6px, 16px) + 2px) calc(clamp(8px, 0.5vw + 6px, 16px) + 4px);
  margin: -2px calc(clamp(8px, 0.5vw + 6px, 16px) * -1 - 4px);
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-sm));
  font: normal normal 400 clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: var(--_p-a);
  text-decoration: underline;
  text-decoration-color: inherit;
  cursor: default;
  transition: text-decoration-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
a:focus-visible {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
@media(hover:hover) {
  a:hover {
    text-decoration-color: inherit;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for hasSlottedAnchor: true, isActive: false and theme: %s 1`] = `
":host {
  display: grid;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
::slotted(a) {
  all: unset !important;
  padding: calc(clamp(8px, 0.5vw + 6px, 16px) + 2px) calc(clamp(8px, 0.5vw + 6px, 16px) + 4px) !important;
  margin: -2px calc(clamp(8px, 0.5vw + 6px, 16px) * -1 - 4px) !important;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-sm)) !important;
  font: normal normal 400 clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  color: var(--_p-a) !important;
  text-decoration: underline !important;
  text-decoration-color: transparent !important;
  cursor: pointer !important;
  transition: text-decoration-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1) !important;
}
::slotted(a:focus-visible) {
  outline: 2px solid var(--p-color-focus) !important;
  outline-offset: 2px !important;
}
@media(hover:hover) {
  ::slotted(a:hover) {
    text-decoration-color: inherit !important;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for hasSlottedAnchor: true, isActive: true and theme: %s 1`] = `
":host {
  display: grid;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
::slotted(a) {
  all: unset !important;
  padding: calc(clamp(8px, 0.5vw + 6px, 16px) + 2px) calc(clamp(8px, 0.5vw + 6px, 16px) + 4px) !important;
  margin: -2px calc(clamp(8px, 0.5vw + 6px, 16px) * -1 - 4px) !important;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-sm)) !important;
  font: normal normal 400 clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  color: var(--_p-a) !important;
  text-decoration: underline !important;
  text-decoration-color: inherit !important;
  cursor: default !important;
  transition: text-decoration-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1) !important;
}
::slotted(a:focus-visible) {
  outline: 2px solid var(--p-color-focus) !important;
  outline-offset: 2px !important;
}
@media(hover:hover) {
  ::slotted(a:hover) {
    text-decoration-color: inherit !important;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for hasSlottedAnchor: true, isActive: true and theme: %s 2`] = `
":host {
  display: grid;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
::slotted(a) {
  all: unset !important;
  padding: calc(clamp(8px, 0.5vw + 6px, 16px) + 2px) calc(clamp(8px, 0.5vw + 6px, 16px) + 4px) !important;
  margin: -2px calc(clamp(8px, 0.5vw + 6px, 16px) * -1 - 4px) !important;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-sm)) !important;
  font: normal normal 400 clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  color: var(--_p-a) !important;
  text-decoration: underline !important;
  text-decoration-color: inherit !important;
  cursor: default !important;
  transition: text-decoration-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1) !important;
}
::slotted(a:focus-visible) {
  outline: 2px solid var(--p-color-focus) !important;
  outline-offset: 2px !important;
}
@media(hover:hover) {
  ::slotted(a:hover) {
    text-decoration-color: inherit !important;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for hasSlottedAnchor: true, isActive: true and theme: %s 3`] = `
":host {
  display: grid;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
::slotted(a) {
  all: unset !important;
  padding: calc(clamp(8px, 0.5vw + 6px, 16px) + 2px) calc(clamp(8px, 0.5vw + 6px, 16px) + 4px) !important;
  margin: -2px calc(clamp(8px, 0.5vw + 6px, 16px) * -1 - 4px) !important;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-sm)) !important;
  font: normal normal 400 clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  color: var(--_p-a) !important;
  text-decoration: underline !important;
  text-decoration-color: inherit !important;
  cursor: default !important;
  transition: text-decoration-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1) !important;
}
::slotted(a:focus-visible) {
  outline: 2px solid var(--p-color-focus) !important;
  outline-offset: 2px !important;
}
@media(hover:hover) {
  ::slotted(a:hover) {
    text-decoration-color: inherit !important;
  }
}
"
`;
